fix: no z-index

--- a/frontend/src/components/Page.module.css
+++ b/frontend/src/components/Page.module.css
@@ -2,7 +2,6 @@
   height: 100vh;
   padding: 20px;
   background: url('../../public/background-tile.svg') no-repeat center/cover;
-  z-index: 0;
   display: flex;
   flex-direction: column;
 }
